--- a/Steckbrief/Steckbrief_style.css
+++ b/Steckbrief/Steckbrief_style.css
@@ -1,6 +1,6 @@
 body {
-    /* background-color: rgb(151, 248, 216, 0.5); */
-    background-color: rgb(223, 219, 219);
+    /* background-color: rgb(223, 219, 219); */
+    background-color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -8,6 +8,7 @@ body {
     h1 {
         position: absolute;
         left: 37%;
+        color: white
     }
 
     .task {
@@ -76,6 +77,7 @@ body {
     h1 {
         position: absolute;
         left: 27%;
+        color: white;
     }
     
     .task {
