--- a/Steckbrief/Steckbrief_style.css
+++ b/Steckbrief/Steckbrief_style.css
@@ -84,8 +84,8 @@ body {
         left: 110px;
         top: 100px;
         background-color: white;
-        width: 50%;
-        height: 40%;
+        width: 250px;
+        height: 220px;
     }
     
     .headline {
@@ -99,10 +99,10 @@ body {
     .square {
         position: absolute;
         left: 110px;
-        top: 240px;
+        top: 400px;
         background-color: white;
-        width: 50%;
-        height: 85%;
+        width: 250px;
+        height: 220px;
     }
     
     .name {
