--- a/Abschlussarbeit/Code/style.css
+++ b/Abschlussarbeit/Code/style.css
@@ -2,7 +2,7 @@ body {
     font-size: medium;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    background-image: url("hogwarts_halle.jpg");
+    background-image: url("assets/hogwarts_halle.jpg");
 }
 
 h1 {
@@ -122,20 +122,6 @@ canvas {
 }
 
 /* Farben */
-.wanddiv {
-    position: relative;
-    top: 5%;
-    left: 16%;
-    width: 60%;
-    height: 10%;
-    border-style: solid;
-    border-color: gray;
-    border-radius: 3px;
-}
-
-.wanddiv:hover {
-    border-color: red;
-}
 
 .redcolor {
     position: relative;
@@ -149,7 +135,7 @@ canvas {
 
 .redcolor:hover {
     border-style: solid;
-    border-color: red;
+    border-color: black;
 }
 
 .bluecolor {
@@ -164,7 +150,7 @@ canvas {
 
 .bluecolor:hover {
     border-style: solid;
-    border-color: red;
+    border-color: black;
 }
 
 .greencolor {
@@ -179,7 +165,7 @@ canvas {
 
 .greencolor:hover {
     border-style: solid;
-    border-color: red;
+    border-color: black;
 }
 
 .yellowcolor {
@@ -193,6 +179,11 @@ canvas {
 }
 
 .yellowcolor:hover {
+    border-style: solid;
+    border-color: black;
+}
+
+.clickstate {
     border-style: solid;
     border-color: red;
 }
