--- a/Abschlussarbeit/Code/style.css
+++ b/Abschlussarbeit/Code/style.css
@@ -3,6 +3,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     background-image: url("assets/hogwarts_halle.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1 {
